# evm

./: CMakeLists.txt  CPackOptions.cmake.in  LICENSE  Makefile  README  TODO  conf.mk  config.h.in  config.mk  configure  default.mk  default.sh
automk/: .gitrepo  Makefile  README  configure  default.mk  default.sh  objs.mk
comp_specs/: name  packages  version
defaults/: Makefile  configure  configure.mk  default.mk  default.sh  objs.mk
demos/: CMakeLists.txt  conf.mk  config.mk  hello1.mk  hello1_evm.c  hello1_evm.h  hello2.mk  hello2_evm.c  hello2_evm.h  hello3.mk  hello3_evm.c  hello3_evm.h  hello4.mk  hello4_evm.c  hello4_evm.h  hello5.mk  hello5_evm.c  hello5_evm.h  hello_evm.c  hello_evm.h
docs/: coding-guide.txt  design-notes.txt  intra-process.txt
include/evm/: libevm.h  log_conf.h  log_module.h
include/u2up-log/: .gitrepo
include/userlog/: log_module.h
libs/: conf.mk  config.mk
libs/evm/: CMakeLists.txt  conf.mk  config.mk  evm.c  evm.h  libevm.mk  messages.c  messages.h  timers.c  timers.h
meta-oe/conf/: layer.conf
meta-oe/recipes/: evm-git.inc  evm-local.inc  evm.bb
toolchains/: Yocto-arm-linux-gnu.cmake
u2up/: build  create_package.sh  import_required.sh  name  packages  prepare  required  u2up-build.sh  version
